--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 html,
 body {
+    overflow-x: clip;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-touch-callout: none;
   min-height: 100%;
